--- a/peeps_frontend_thirdweb/src/app/globals.css
+++ b/peeps_frontend_thirdweb/src/app/globals.css
@@ -9,7 +9,7 @@
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	font-family: 'Inter', sans-serif;
+	font-family: 'Noto Sans', 'Inter', sans-serif;
 	font-optical-sizing: auto;
 	font-style: normal;
 	font-variation-settings: 'slnt' 0;
@@ -17,6 +17,6 @@
 
 @layer base {
 	body {
-		@apply bg-zinc-950 text-neutral-200;
+		@apply bg-base-100 dark:bg-zinc-950 dark:text-neutral-200;
 	}
 }
